fix rwd arbitrary table border spacing

--- a/src/generateStyle/2.breakpoints/_index.scss
+++ b/src/generateStyle/2.breakpoints/_index.scss
@@ -13840,6 +13840,97 @@
   }
 }
 
+// Tables
+@mixin sm\:border-spacing-($value) {
+  @media (min-width: $breakpoint-sm) {
+    border-spacing: $value;
+  }
+}
+
+@mixin sm\:border-spacing-x-($value) {
+  @media (min-width: $breakpoint-sm) {
+    border-spacing: $value 0;
+  }
+}
+
+@mixin sm\:border-spacing-y-($value) {
+  @media (min-width: $breakpoint-sm) {
+    border-spacing: 0 $value;
+  }
+}
+
+@mixin md\:border-spacing-($value) {
+  @media (min-width: $breakpoint-md) {
+    border-spacing: $value;
+  }
+}
+
+@mixin md\:border-spacing-x-($value) {
+  @media (min-width: $breakpoint-md) {
+    border-spacing: $value 0;
+  }
+}
+
+@mixin md\:border-spacing-y-($value) {
+  @media (min-width: $breakpoint-md) {
+    border-spacing: 0 $value;
+  }
+}
+
+@mixin lg\:border-spacing-($value) {
+  @media (min-width: $breakpoint-lg) {
+    border-spacing: $value;
+  }
+}
+
+@mixin lg\:border-spacing-x-($value) {
+  @media (min-width: $breakpoint-lg) {
+    border-spacing: $value 0;
+  }
+}
+
+@mixin lg\:border-spacing-y-($value) {
+  @media (min-width: $breakpoint-lg) {
+    border-spacing: 0 $value;
+  }
+}
+
+@mixin xl\:border-spacing-($value) {
+  @media (min-width: $breakpoint-xl) {
+    border-spacing: $value;
+  }
+}
+
+@mixin xl\:border-spacing-x-($value) {
+  @media (min-width: $breakpoint-xl) {
+    border-spacing: $value 0;
+  }
+}
+
+@mixin xl\:border-spacing-y-($value) {
+  @media (min-width: $breakpoint-xl) {
+    border-spacing: 0 $value;
+  }
+}
+
+@mixin \2xl\:border-spacing-($value) {
+  @media (min-width: $breakpoint-2xl) {
+    border-spacing: $value;
+  }
+}
+
+@mixin \2xl\:border-spacing-x-($value) {
+  @media (min-width: $breakpoint-2xl) {
+    border-spacing: $value 0;
+  }
+}
+
+@mixin \2xl\:border-spacing-y-($value) {
+  @media (min-width: $breakpoint-2xl) {
+    border-spacing: 0 $value;
+  }
+}
+
 // Transitions & Animation
 // Transition Property
 @mixin sm\:transition-($value) {
