--- a/src/generateStyle/3.abitraryValues/_index.scss
+++ b/src/generateStyle/3.abitraryValues/_index.scss
@@ -869,6 +869,14 @@
   border-spacing: $value;
 }
 
+@mixin border-spacing-x-($value) {
+  border-spacing: $value 0;
+}
+
+@mixin border-spacing-y-($value) {
+  border-spacing: 0 $value;
+}
+
 // Transitions & Animation
 // Transition Property
 @mixin transition-($value) {
