--- a/test.css
+++ b/test.css
@@ -1,7 +1,3 @@
-.test > * + * {
-  border-color: rgb(76, 5, 25);
-}
-
 .test {
-  color: red;
+  --tw-shadow-color: red;
 }/*# sourceMappingURL=test.css.map */
